<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.chekhov</groupId>
    <artifactId>http_poller_ui</artifactId>
    <version>1.0.2</version>
    <name>http_poller_ui</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.12.1</junit.version>
        <javafx.version>21.0.6</javafx.version>
        <jpackage.type>DMG</jpackage.type>
        <jpackage.icon>src/main/resources/org/chekhov/http_poller_ui/icons/AppIcon.icns</jpackage.icon>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>net.synedra</groupId>
            <artifactId>validatorfx</artifactId>
            <version>0.6.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>2.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.44</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.44</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>
                                org.chekhov.http_poller_ui/org.chekhov.http_poller_ui.App
                            </mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>http-poller</jlinkZipName>
                            <jlinkImageName>http-poller</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                            <jmodsPathString>${project.basedir}/jmods</jmodsPathString>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <options>
                        <option>--enable-native-access=javafx.graphics</option>
                    </options>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <name>HTTP Poller</name>
                    <appVersion>${project.version}</appVersion>
                    <vendor>Artem Plisesnikov</vendor>
                    <copyright>2026 Artem Plisesnikov</copyright>
                    <destination>target/dist</destination>
                    <runtimeImage>target/http-poller</runtimeImage>
                    <module>org.chekhov.http_poller_ui/org.chekhov.http_poller_ui.App</module>
                    <javaOptions>
                        <option>--enable-native-access=javafx.graphics</option>
                    </javaOptions>
                    <type>${jpackage.type}</type>
                    <icon>${jpackage.icon}</icon>
                    <macPackageName>HTTP Poller</macPackageName>
                    <macPackageIdentifier>org.chekhov.http_poller_ui</macPackageIdentifier>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>